feat: add deployment guide for GitHub Pages and remove deploy script
- Create DEPLOY.md with instructions for deploying static pages and hybrid deployment options
- Remove obsolete deploy.sh script as deployment is now handled via GitHub Actions
- Update HRM tutorial content to include HRMFlowWrapper for enhanced visualization

--- a/app/tutorials/hrm/content.mdx
+++ b/app/tutorials/hrm/content.mdx
@@ -1,3 +1,5 @@
+import HRMFlowWrapper from './HRMFlowWrapper';
+
 # Hierarchical Reasoning Model (HRM) — Visual Tutorial
 
 Đa số LLM suy luận bằng cách sinh rất nhiều token (Chain-of-Thought), trong khi HRM tăng số bước suy luận nội bộ với hai tầng Controller / Worker.
@@ -8,6 +10,8 @@ Phần animation trên mô phỏng:
 - **L-module** chạy nhanh, xử lý chi tiết (K steps mỗi cycle)
 - **H-module** cập nhật chiến lược sau mỗi chu kỳ (1 step mỗi cycle)
 - **Q-head** quyết định khi nào dừng (Adaptive Computational Time)
+
+<HRMFlowWrapper />
 
 ## Kiến Trúc Chi Tiết
 
